@startuml workflow.png

title Robot workflow
caption Figure 2: Localisation and navigation robot workflow
footer © 2022, Intelligent Mobile Robotics, University of Southampton

class Localisation {
  {field} name
  {field} driver
  {field} parameters
  {method} predict()
  {method} update()
}

class Navigation {
  {field} name
  {field} driver
  {field} parameters
  {method} compute_request()
}

class NaiveRotateMove {
  {field} parameters
  {method} compute_request()
}

class DeadReckoning {
  {field} parameters
  {method} predict()
  {method} update()
}

class Robot {
  .. Sense ..
  {field} compass
  {field} encoder
  {field} lidar
  .. Think ..
  {field} localisation
  {field} navigation
  {method} run()
  .. Act ..
  {field} motors
}

Navigation *-- NaiveRotateMove : implements
Localisation *-- DeadReckoning : implements
Navigation -u-> Robot : uses
Localisation -u-> Robot : uses
@enduml
